<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="147dp"
        android:text="@string/sign_in"
        android:textAlignment="textStart"
        android:textAppearance="@style/sign_options"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/sign_inPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/rectangle_arrondi"
        android:ems="10"
        android:hint="@string/sign_in_box2"
        android:inputType="textPassword"
        tools:paddingLeft="30dp" />

    <EditText
        android:id="@+id/sign_inEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/sign_inPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rectangle_arrondi"
        android:ems="10"
        android:hint="@string/sign_in_box1"
        android:inputType="textEmailAddress"
        tools:paddingLeft="30dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-43dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:lineSpacingExtra="14sp"
        android:text="@string/sign_in_up"
        android:textAppearance="@style/sign_options"
        android:textSize="17dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/forget_password"
        android:textAppearance="@style/sign_options"
        android:textCursorDrawable="@color/cool_pink"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="196dp"
        android:layout_height="178dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="-65dp"
        android:src="@drawable/sign_in_green_circle"
        android:contentDescription="green"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="498dp"
        android:layout_height="586dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-25dp"
        android:layout_marginTop="-225dp"
        android:layout_marginEnd="-29dp"
        android:src="@drawable/sign_in_yellow_circle"
        android:contentDescription="yellow"/>

    <ImageView
        android:id="@+id/grey_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-83dp"
        android:layout_marginTop="-94dp"
        android:src="@drawable/sign_in_grey_circle"
        android:contentDescription="grey" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="114dp"
        android:fontFamily="@font/futuraheavy"
        android:text="@string/welcome"
        android:textAppearance="@style/title_font"
        android:textColor="#FEFEFE"
        android:textSize="42sp" />

    <ImageView
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="574dp"
        android:layout_marginEnd="52dp"
        android:layout_toEndOf="@+id/button"
        android:background="@drawable/brown_circle"
        android:clickable="true"
        tools:src="@drawable/ic_arrow_right"
        android:contentDescription="button" />

</RelativeLayout>