<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cool_green"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/yellowcircle"
        android:layout_width="wrap_content"
        android:layout_height="1000dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-104dp"
        android:layout_marginTop="-469dp"
        android:src="@drawable/sign_in_yellow_circle" />

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/rectangle_arrondi"
        android:ems="10"
        android:hint="@string/sign_up_box1"
        android:inputType="text"
        android:paddingLeft="30dp" />

    <EditText
        android:id="@+id/signup_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/rectangle_arrondi"
        android:ems="10"
        android:hint="@string/sign_up_box2"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp" />

    <EditText
        android:id="@+id/signup_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_Email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/rectangle_arrondi"
        android:ems="10"
        android:hint="@string/sign_up_box3"
        android:inputType="textPassword"
        android:paddingLeft="30dp" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="269dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="98dp"
        android:fontFamily="@font/futuraheavy"
        android:text="@string/create_account"
        android:textAppearance="@style/title_font"
        android:textColor="@color/white"
        android:textSize="42dp" />

    <ImageView
        android:id="@+id/signup_whitecircle"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="186dp"
        android:layout_marginEnd="-116dp"
        android:layout_marginBottom="-74dp"
        android:src="@drawable/sign_up_white_circle" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_Password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="44dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_options"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_Password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/brown_circle"
        android:src="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/signUpToIn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:text="@string/sign_up_in"
        android:textAppearance="@style/sign_options"
        android:textSize="23sp" />

    <ImageView
        android:id="@+id/signup_import"
        android:layout_width="194dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="11dp"
        android:clickable="true"
        android:src="@drawable/sign_up_grey_circle"
        android:contentDescription="Upload an Image" />

    <ImageView
        android:id="@+id/signup_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_arrow_left" />

    <ImageView
        android:id="@+id/signup_upload"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/signup_import"
        android:layout_alignTop="@+id/signup_import"
        android:layout_alignEnd="@+id/signup_import"
        android:layout_marginStart="70dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="70dp"
        android:src="@drawable/ic_upload" />

    <TextView
        android:id="@+id/uploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_upload"
        android:layout_alignStart="@+id/signup_import"
        android:layout_marginStart="40dp"
        android:layout_marginTop="9dp"
        android:text="Upload an image"
        android:textColor="@color/darb_dark_brown"
        android:textSize="16sp" />

</RelativeLayout>