<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cool_green"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/yellowcircle"
        android:layout_width="wrap_content"
        android:layout_height="1000dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-104dp"
        android:layout_marginTop="-469dp"
        android:src="@drawable/sign_in_yellow_circle" />

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/rectangle_arrondi"
        android:ems="10"
        android:hint="@string/sign_up_box1"
        android:inputType="text"
        android:paddingLeft="30dp" />

    <EditText
        android:id="@+id/signup_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/rectangle_arrondi"
        android:ems="10"
        android:hint="@string/sign_up_box2"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp" />

    <EditText
        android:id="@+id/signup_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_Email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/rectangle_arrondi"
        android:ems="10"
        android:hint="@string/sign_up_box3"
        android:inputType="textPassword"
        android:paddingLeft="30dp" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="269dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="98dp"
        android:fontFamily="@font/futuraheavy"
        android:text="@string/create_account"
        android:textAppearance="@style/title_font"
        android:textColor="@color/white"
        android:textSize="42dp" />

    <ImageView
        android:id="@+id/signup_whitecircle"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="186dp"
        android:layout_marginEnd="-116dp"
        android:layout_marginBottom="-74dp"
        android:src="@drawable/sign_up_white_circle" />


    <Button
        android:id="@+id/signUpToInButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="48dp"
        android:background="?attr/selectableItemBackground"
        android:text="Sign in"
        android:textSize="23sp" />
    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_Password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="44dp"
        android:text="Sign up"
        android:textSize="25sp"
        android:background="?attr/selectableItemBackground"
        />


</RelativeLayout>